<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.loginFragment.LoginFragment">

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#036992"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

  <ImageView
      android:layout_width="216dp"
      android:layout_height="@dimen/measure_86dp"
      android:src="@drawable/splash_background"
     android:layout_alignParentTop="true"
      android:layout_centerInParent="true"
      android:layout_marginTop="@dimen/measure_36dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="26sp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/measure_36dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/measure_36dp"
        app:layout_constraintTop_toBottomOf="@+id/top_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5">

       <android.support.design.widget.TextInputLayout
           android:id="@+id/mobile_number_TILayout"
           android:layout_width="match_parent"
           android:layout_height="@dimen/measure_56dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <android.support.design.widget.TextInputEditText
               android:id="@+id/mobile_numberTIEditText"
               android:layout_width="match_parent"
               android:layout_height="@dimen/measure_56dp"
               android:hint="@string/mobile_number"/>

       </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_TILayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/measure_56dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/measure_20dp"
           android:layout_below="@+id/mobile_number_TILayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_TIEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/measure_10dp"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/measure_14sp"
            android:layout_below="@+id/password_TILayout"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="@dimen/measure_20dp"
            android:layout_marginBottom="@dimen/measure_56dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/forget_password_tv"/>

        <TextView
            android:id="@+id/start_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_create"
            android:layout_below="@+id/login_button"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/create_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:layout_below="@+id/login_button"
            android:layout_toEndOf="@+id/start_tv" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>